--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^2.16.0",
+    "axios": "^0.19.2",
     "graphql": "^15.3.0",
     "merge-graphql-schemas": "^1.7.8",
     "mongoose": "^5.9.25"
